--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,36 @@
-<%# HTML correspondiente a articles show %>
+<%# HTML correspondiente a la vista de un artículo (show) %>
 <%= render "shared/navbar" %>
 
-<h1><%= @article.name %></h1>
+<div class="articles-show-container">
 
-<p><strong>Description :</strong> <%= @article.description %></p>
-<p><strong>Prix :</strong> <%= @article.price %></p>
-<p><strong>Stock :</strong> <%= @article.stock %></p>
-<p><strong>Catégorie :</strong> <%= @article.category %></p>
+  <%= render 'shared/header' %>
 
-<%= image_tag @article.image_url if @article.image_url.present? %>
+  <div class="articles-show-title">
+    <div class="articles-show-title-card-A">
+      <h1>Détails de l'Article</h1>
+    </div>
+    <div class="articles-show-title-card-B">
+      <%= link_to 'Retour à la liste', articles_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
 
-<%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %> |
-<%= link_to 'Retour à la liste', articles_path, class: 'btn btn-secondary' %>
-<%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
+  <div class="articles-show-content">
+    <div class="articles-show-image">
+      <%= image_tag @article.image_url if @article.image_url.present? %>
+    </div>
+
+    <div class="articles-show-details">
+      <p><strong>Nom :</strong> <%= @article.name %></p>
+      <p><strong>Description :</strong> <%= @article.description %></p>
+      <p><strong>Prix :</strong> <%= @article.price %></p>
+      <p><strong>Stock :</strong> <%= @article.stock %></p>
+      <p><strong>Catégorie :</strong> <%= @article.category %></p>
+    </div>
+
+    <div class="articles-show-actions">
+      <%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %>
+      <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
+    </div>
+  </div>
+
+</div>
