--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -34,7 +34,7 @@
     .articles-show-image {
       padding: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border: 2px solid black;
+      // border: 2px solid black;
 
       img {
         max-width: 100%;
