--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -28,7 +28,7 @@
   .articles-show-content {
     display: flex;
     flex-direction: column;
-    box-shadow: 4px 16px 16px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
     gap: 20px;
 
 
