--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 32px;
     margin-bottom: 20px;
 
 
@@ -46,25 +47,30 @@
     }
 
     .articles-show-details {
-      p {
-        font-size: 18px;
-        margin-bottom: 10px;
 
-        strong {
-          color: #9a5f45;
+      .articles-show-details {
+        p {
+          font-size: 18px;
+          margin-bottom: 10px;
+
+          strong {
+            color: #9a5f45;
+          }
         }
       }
-    }
 
-    .articles-show-actions {
-      display: flex;
-      gap: 10px;
+      .articles-show-actions {
+        display: flex;
+        gap: 10px;
 
-      .btn {
-        font-size: 16px;
-        padding: 8px 16px;
+        .btn {
+          font-size: 16px;
+          padding: 8px 16px;
+        }
       }
+
     }
+
   }
 }
 
