--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -47,6 +47,8 @@
     }
 
     .articles-show-details {
+      display: flex;
+      flex-direction: column;
 
       .articles-show-details {
         p {
