--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -60,6 +60,7 @@
 
       .articles-show-actions {
         border: 2px solid black;
+        bottom: 0;
         display: flex;
         gap: 10px;
 
