--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -60,9 +60,9 @@
 
       .articles-show-actions {
         border: 2px solid black;
-        bottom: 0;
         display: flex;
         gap: 10px;
+        margin-top: auto; /* Pushes the element to the bottom of the container */
 
         .btn {
           font-size: 16px;
