--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -62,7 +62,7 @@
         border: 2px solid black;
         display: flex;
         gap: 10px;
-        margin-top: auto; /* Pushes the element to the bottom of the container */
+        margin-top: auto;
 
         .btn {
           font-size: 16px;
