--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -39,7 +39,7 @@
     .articles-show-image {
 
       img {
-        max-width: 100%;
+        max-width: 80vh;
         height: auto;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
