--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -1,3 +1,5 @@
+
+
 .articles-show-container {
   background-color: white;
   padding: 8px;
@@ -118,7 +120,7 @@
       .articles-show-image {
 
         img {
-          max-width: 100%;
+          max-width: 80vh;
           height: auto;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -158,6 +160,7 @@
 
 @media screen and (max-width: 1024px) {
   .articles-show-container {
+    display: flex;
     background-color: white;
     padding: 8px;
 
@@ -198,7 +201,7 @@
       .articles-show-image {
 
         img {
-          max-width: 100%;
+          max-width: 80vh;
           height: auto;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
