--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -171,6 +171,7 @@
       margin-bottom: 20px;
 
       .articles-show-title-card-A {
+        width: 50%;
 
         h1 {
           color: #9a5f45;
