--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -198,6 +198,7 @@
 
 
       .articles-show-image {
+        width: 50%;
 
         img {
           max-width: 80vh;
@@ -207,6 +208,7 @@
       }
 
       .articles-show-details {
+        width: 50%;
         display: flex;
         flex-direction: column;
 
