--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -2,7 +2,6 @@
 
 .articles-show-container {
   background-color: white;
-  margin: 10vh;
   padding: 8px;
 
   .articles-show-title {
@@ -33,8 +32,9 @@
 
   .articles-show-content {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    margin: 10vh;
     padding: 16px;
     box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
     gap: 20px;
