--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -51,6 +51,7 @@
     .articles-show-details {
       display: flex;
       flex-direction: column;
+      justify-content: start;
 
       .articles-show-details {
         p {
