--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -37,6 +37,7 @@
     tbody {
       tr {
         td {
+          padding: 8px;
           padding: 12px;
           border-bottom: 1px solid #dee2e6;
 
