--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -146,7 +146,7 @@
 
           td {
             display: block;
-            text-align: right;
+            text-align: left;
             padding: 8px;
             border-bottom: 1px solid #dee2e6;
 
