--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
 
   <div class="navbar-right-card">
 
-      <a href="https://www.instagram.com/lart_et_la_matiere1/"><i class="fa-brands fa-instagram"></i></a></li>
+      <a href="https://www.instagram.com/lart_et_la_matiere1/" target=blank_to><i class="fa-brands fa-instagram"></i></a></li>
       <a href="#"><i class="fa-regular fa-user"></i></a></li>
       <a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
   </div>
