--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "pages/articles_new";
 @import "pages/articles_edit";
 @import "pages/articles_show";
+@import "pages/users_show";
 
 
 // background-color: #9a5f45;
