--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <%# HTML correspondiente a la vista del usuario %>
 
-<h1>Mon profil</h1>
+<div class="user-profile">
+  <h1>Mon profil</h1>
 
-<p><strong>Email:</strong> <%= @user.email %></p>
-<p><strong>Account Created:</strong> <%= @user.created_at.strftime('%d/%m/%Y') %></p>
-<p><strong>Last Activity:</strong> <%= @user.last_activity_at || 'Not available' %></p>
+  <p><strong>Email:</strong> <%= @user.email %></p>
+  <p><strong>Account Created:</strong> <%= @user.created_at.strftime('%d/%m/%Y') %></p>
+  <p><strong>Last Activity:</strong> <%= @user.last_activity_at || 'Not available' %></p>
 
-<%= link_to 'Edit Profile', edit_user_registration_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Edit Profile', edit_user_registration_path, class: 'btn btn-secondary' %>
+
+</div>
