--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <%# HTML correspondiente a la vista del usuario %>
 
+<%= render "shared/navbar" %>
+
+
 <div class="user-profile">
   <h1>Mon profil</h1>
 
