--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -1,6 +1,7 @@
 // SCSS correspondiente a la vista de un usuario
 
 .user-profile {
+  margin: 10vh auto;
   background: white;
   padding: 16px;
   border: 2px solid #9a5f45;
