--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,12 +11,15 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/presentation";
+// articles
 @import "pages/articles";
 @import "pages/articles_index";
 @import "pages/articles_new";
 @import "pages/articles_edit";
 @import "pages/articles_show";
+// users
 @import "pages/users_show";
+@import "pages/users_edit";
 
 
 // background-color: #9a5f45;
