--- a/app/assets/stylesheets/pages/_users_edit.scss
+++ b/app/assets/stylesheets/pages/_users_edit.scss
@@ -109,62 +109,4 @@
       text-decoration: underline;
     }
   }
-}<%# HTML correspondiente a la vista de edición de usuario %>
-
-<%= render "shared/navbar" %>
-
-<%= render 'shared/header' %>
-
-<div class="user-edit">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= f.error_notification %>
-
-    <div class="form-inputs">
-      <div class="input">
-        <%= f.input :email, required: true, autofocus: true %>
-      </div>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-      <% end %>
-
-      <div class="input">
-        <%= f.input :password,
-                    hint: "leave it blank if you don't want to change it",
-                    required: false,
-                    input_html: { autocomplete: "new-password" } %>
-      </div>
-
-      <div class="input">
-        <%= f.input :password_confirmation,
-                    required: false,
-                    input_html: { autocomplete: "new-password" } %>
-      </div>
-
-      <div class="input">
-        <%= f.input :current_password,
-                    hint: "we need your current password to confirm your changes",
-                    required: true,
-                    input_html: { autocomplete: "current-password" } %>
-      </div>
-    </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Update", class: 'btn btn-primary' %>
-    </div>
-  <% end %>
-
-  <h3>Cancel my account</h3>
-
-  <div class="cancel-account">
-    <%= button_to "Cancel my account",
-                  registration_path(resource_name),
-                  data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" },
-                  method: :delete,
-                  class: 'btn btn-danger' %>
-  </div>
-
-  <%= link_to "Back", :back, class: 'back-link' %>
-</div>
+}
