--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,8 +8,9 @@
     <img src="https://res.cloudinary.com/dcfmvazgl/image/upload/v1742556817/new-logo_sqtb8o.jpg" alt="logo de l'art et la matiere">
   </div>
   <div class="header-card-right">
-    <a href="/home"></a>
-    <h1>L'art et la matiere</h1>
-    <h2>Une sélection d'œuvres et d'objets écoresponsables</h2>
+    <a href="/home">
+      <h1>L'art et la matiere</h1>
+      <h2>Une sélection d'œuvres et d'objets écoresponsables</h2>
+    </a>
   </div>
 </header>
