--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -19,19 +19,24 @@
   }
 
   .header-card-right {
-    h1 {
-      color: #9a5f45;
-      font-size: 48px;
-      font-family: "Dancing Script", serif; // Aplicando la nueva fuente
-      font-weight: 600;
+    a {
+      decoration: none;
+      h1 {
+        color: #9a5f45;
+        font-size: 48px;
+        font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+        font-weight: 600;
+      }
+
+      h2 {
+        color: #e8997c;
+        font-size: 24px;
+        font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+        font-weight: 600;
+      }
+
     }
 
-    h2 {
-      color: #e8997c;
-      font-size: 24px;
-      font-family: "Dancing Script", serif; // Aplicando la nueva fuente
-      font-weight: 600;
-    }
 
   }
 
