--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -20,7 +20,8 @@
 
   .header-card-right {
     a {
-      decoration: none;
+      text-decoration: none;
+
       h1 {
         color: #9a5f45;
         font-size: 48px;
