--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,5 +1,10 @@
+<%= render "shared/navbar" %>
+
+<%= render 'shared/header' %>
+
+
 <div class="admin-dashboard">
-  <h1>Bienvenue au Tableau de Bord Administratif</h1>
+  <h1>Bienvenue Sandrine au Tableau de Bord Administratif</h1>
 
   <div class="dashboard-sections">
     <div class="section">
