--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 // users
 @import "pages/users_show";
 @import "pages/users_edit";
+// admin
+@import "pages/admin_dashboard";
 
 
 // background-color: #9a5f45;
