--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="admin-dashboard">
-  <h1>Bienvenue Sandrine au Tableau de Bord Administratif</h1>
+  <h1>Bienvenue Sandrine</h1>
 
   <div class="dashboard-sections">
     <div class="section">
