--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -3,7 +3,11 @@
 <%= render 'shared/header' %>
 
 <div class="admin-dashboard">
-  <h1>Bienvenue Sandrine</h1>
+  <div class="admin-dashboard-title">
+    <div class="admin-dashboard-title-card-A">
+      <h1>Bienvenue Sandrine</h1>
+    </div>
+  </div>
 
   <div class="dashboard-sections">
     <div class="section">
