--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -3,13 +3,17 @@
 
   .admin-dashboard-title {
 
-    .dashboard-sections {
-      display: flex;
-      gap: 20px;
+    .admin-dashboard-title-card-A {
+
+
     }
 
   }
 
+  .dashboard-sections {
+    display: flex;
+    gap: 20px;
+  }
 
   .section {
     border: 1px solid #ccc;
