--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -2,6 +2,7 @@
   padding: 20px;
 
   .admin-dashboard-title-card-A {
+    width: 50%;
 
     .admin-dashboard-title {
 
@@ -13,6 +14,7 @@
   .dashboard-sections {
     display: flex;
     flex-direction: column;
+    width: 50%;
     gap: 20px;
 
     .section {
