--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -1,6 +1,7 @@
 .admin-dashboard {
   display: flex;
   padding: 20px;
+  border: 2px solid black;
 
   .admin-dashboard-title-card-A {
     width: 50%;
