--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -8,6 +8,12 @@
 
     .admin-dashboard-title {
 
+      h1 {
+        color: #9a5f45;
+        font-size: 48px;
+        font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+        font-weight: 600;
+      }
 
     }
 
