--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -8,6 +8,7 @@
 
     .admin-dashboard-title {
       width: 100%;
+      display: flex;
       align-items: center;
       justify-content: center;
       border: 2px solid black;
