--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -4,8 +4,22 @@
 
 <div class="admin-dashboard">
   <div class="admin-dashboard-title-card-A">
+
     <div class="admin-dashboard-title">
       <h1>Bienvenue Sandrine</h1>
+    </div>
+
+    <div class="admin-dashboard-informat">
+      <h2>Informations du Washington</h2>
+        <p>Ici, vous trouverez votre tableau
+          contenant des informations importantes
+          en tant qu'utilisateur, conçu pour vous
+          aider dans le développement de votre
+          activité économique. Dans cette section,
+          vous recevrez des messages directs sur
+          les mises à jour et les changements de
+          la page liés à sa maintenance.
+        </p>
     </div>
   </div>
 
