--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -15,8 +15,8 @@
       border-radius: 16px;
       background: linear-gradient(145deg, #cacaca, #f0f0f0);
       box-shadow:  20px 20px 60px #bebebe,
-             -20px -20px 60px #ffffff;
-             margin: 8px;
+                   -20px -20px 60px #ffffff;
+      margin: 8px;
 
       h1 {
         color: #9a5f45;
@@ -26,6 +26,14 @@
       }
 
     }
+
+    .admin-dashboard-information {
+      border-radius: 16px;
+      background: linear-gradient(145deg, #cacaca, #f0f0f0);
+      box-shadow:  20px 20px 60px #bebebe,
+                  -20px -20px 60px #ffffff;
+    }
+
 
   }
 
