--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -28,6 +28,8 @@
     }
 
     .admin-dashboard-information {
+      width: 100%;
+
       border-radius: 16px;
       background: linear-gradient(145deg, #cacaca, #f0f0f0);
       box-shadow:  20px 20px 60px #bebebe,
