--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -35,6 +35,7 @@
       box-shadow:  20px 20px 60px #bebebe,
                   -20px -20px 60px #ffffff;
       margin: 8px;
+      padding: 8px;
 
       h2 {
         color: #9a5f45;
