--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -12,12 +12,11 @@
     <div class="admin-dashboard-information">
       <h2>Informations du Washington</h2>
         <p>Ici, vous trouverez votre tableau
-          contenant des informations importantes
-          en tant qu'utilisateur, conçu pour vous
-          aider dans le développement de votre
-          activité économique. Dans cette section,
-          vous recevrez des messages directs sur
-          les mises à jour et les changements de
+          contenant des informations importantes,
+          conçu pour vous aider dans le développement
+          de votre activité économique. Dans cette
+          section, vous recevrez des messages directs
+          sur les mises à jour et les changements de
           la page liés à sa maintenance.
         </p>
     </div>
