--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -56,6 +56,11 @@
   .dashboard-sections {
     display: flex;
     flex-direction: column;
+    border-radius: 16px;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow:  20px 20px 60px #bebebe,
+                   -20px -20px 60px #ffffff;
+    margin: 8px;
     width: 48%;
     gap: 20px;
 
