--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -56,8 +56,9 @@
   .dashboard-sections {
     display: flex;
     flex-direction: column;
-
     width: 48%;
+    margin: 8px;
+    padding: 8px;
     gap: 20px;
 
     .section {
@@ -68,7 +69,6 @@
       background: linear-gradient(145deg, #cacaca, #f0f0f0);
       box-shadow:  20px 20px 60px #bebebe,
                     -20px -20px 60px #ffffff;
-      margin: 8px;
 
       .btn {
         display: inline-block;
