--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -1,10 +1,10 @@
 .admin-dashboard {
   display: flex;
-  padding: 8px;
 
   .admin-dashboard-title-card-A {
     height: 100vh;
     width: 48%;
+    margin: 8px;
 
     .admin-dashboard-title {
       width: 100%;
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     width: 48%;
-    margin: 0 8px;
+    padding: 8px;
     gap: 20px;
 
     .section {
