--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -4,6 +4,7 @@
   .admin-dashboard-title-card-A {
     height: 100vh;
     width: 48%;
+    margin: 0 8px;
 
     .admin-dashboard-title {
       width: 100%;
@@ -56,7 +57,7 @@
     display: flex;
     flex-direction: column;
     width: 48%;
-    padding: 8px;
+    margin: 0 8px;
     gap: 20px;
 
     .section {
