--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     width: 48%;
-    margin: 0 8px;
+    margin: 8px 0;
     gap: 20px;
 
     .section {
