--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -4,7 +4,7 @@
   .admin-dashboard-title-card-A {
     height: 100vh;
     width: 48%;
-    margin: 8px;
+    margin: 0 8px;
 
     .admin-dashboard-title {
       width: 100%;
