--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -111,9 +111,10 @@
       padding: 15px;
       text-align: center;
       border-radius: 16px;
-      background: #008000;
-      box-shadow:  20px 20px 60px #006d00,
-             -20px -20px 60px #009300;
+      border-radius: 16px;
+      background: #D2122E;
+      box-shadow:  20px 20px 60px #b30f27,
+             -20px -20px 60px #f21535;
 
       .btn {
         display: inline-block;
