--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -60,7 +60,7 @@
     margin: 8px 8px 8px 8px;
     gap: 8px;
 
-    .dashboard-sections {
+    .section-utilisateur {
 
       padding: 15px;
       text-align: center;
