--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -1,7 +1,10 @@
 .admin-dashboard {
   display: flex;
 
+
   .admin-dashboard-title-card-A {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 48%;
     margin: 8px;
