--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,13 +2,22 @@
 
 <%= render 'shared/header' %>
 
-
-
 <h1>All Users</h1>
-<ul>
-  <% @users.each do |user| %>
-    <li><%= user.email %></li>
-    <li><%= user.created_at %></li>
-    <li><%= user.updated_at %></li>
-  <% end %>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Email</th>
+      <th>Created At</th>
+      <th>Updated At</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.email %></td>
+        <td><%= user.created_at %></td>
+        <td><%= user.updated_at %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
