--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "pages/users_edit";
 // admin
 @import "pages/admin_dashboard";
+@import "pages/admin_users";
 
 
 // background-color: #9a5f45;
