--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,6 +2,10 @@
 
 <%= render 'shared/header' %>
 
+<div class="admin-users">
+
+</div>
+
 <%= link_to 'Retour', request.referer || root_path, class: 'btn btn-secondary' %>
 
 <h1>Utilisateurs</h1>
