--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,7 +6,7 @@
 
 
 <div class="admin-users">
-  <div class="admin-users-tit">
+  <div class="admin-users-title">
     <%= link_to 'Retour', request.referer || root_path, class: 'btn btn-secondary' %>
     <h1>Utilisateurs</h1>
   </div>
